# PPPlayer

./: .gitignore  CMakeLists.txt  README.md  calibration  calibration1  calibration2_old  cam1_homo  cam2_pos  color_range  color_range_1  color_range_2  cr_a50  cr_k52  cr_k520  esttest  ho  ho_table  main.cpp  main.py  output.avi  pos  requirements.txt  servo_angle.csv  t.bin.0  test.py
ball_detection/: CMakeLists.txt  ColorRange.py  Dectection.py  Detection.py  a.py  calibrator.py  colorRangeSetter.py  color_range  t.py  test.py  testDectection.py  testDetection.py  test_ColorRange.py  test_Detection.py  test_color_range
ball_detection/result/20230718-1/: detection.csv
ball_detection/result/20230718-2/: detection.csv
ball_detection/result/718-2-1/: detection.csv  situation.csv
ball_detection/result/camera1/: detection.csv
ball_predection/: display.py  predict.py  prediction_config.py  sync.py  testPredect.py
ball_simulate/: CMakeLists.txt  dataFileOperator.cpp  dataFileOperator.py  physx_simulate.cpp  simulate.py  test_simulate.py  train.py
ball_simulate/snippetrender/: SnippetCamera.h
ball_simulate/v1/: dataFileOperator.py  simulate.py
ball_simulate/v2/: dataFileOperator.cpp  models.py  simulate.py  train.py
ball_simulate/v3/: cross.csv  dataFileOperator.cpp  simulate.py  train.py
ball_simulate/v4/: Constants.py  dataFileOperator.py  models.py  simulate.py  train.py
ball_simulate_v2/: README.md  dataFileOperator.cpp  dataFileOperator.py  models.py  simulate.py  train.py
ball_simulate_v2/snippetrender/: SnippetCamera.h
ball_simulate_v3/: dataFileOperator.py  models.py  simulate.py  train.py
camera_calibrate/: Calibration.py  a.py  main.py  opencv.py  pose.c  t.py  test.py  utils.py
camera_reciever/: CameraReceiver.py
configs/: calibration_hd
configs/0123_cam1/: camera_info  consider_poly
configs/0123_cam1_1/: camera_info  consider_poly
configs/0123_cam2/: camera_info  consider_poly
configs/0124_cam1/: camera_info  consider_poly
configs/0124_cam2/: camera_info  consider_poly
configs/0124_cam2_1/: camera_info  consider_poly
configs/0124_cam2_2/: camera_info  consider_poly
configs/0125_cam1/: camera_info  consider_poly
configs/0125_cam2/: camera_info  consider_poly
configs/110_cam1/: camera_info  consider_poly
configs/110_cam2/: camera_info  consider_poly
configs/110_cam2_1/: camera_info  consider_poly
configs/1215_cam1_2/: camera_info  consider_poly
configs/1215_p_3/: weight
configs/1215_p_3/cam1/: camera_info
configs/121_cam1/: camera_info  consider_poly
configs/121_cam2/: camera_info  consider_poly
configs/1229_cam1/: camera_info  consider_poly
configs/1229_cam1_1/: camera_info  consider_poly
configs/1229_cam1_2/: camera_info  consider_poly
configs/1229_cam1_3/: camera_info  consider_poly
configs/1229_cam2/: camera_info  consider_poly
configs/1229_cam2_1/: camera_info  consider_poly
configs/1229_cam2_2/: camera_info  consider_poly
configs/1229_cam2_3/: camera_info  consider_poly  frame_size
configs/128/cam1/: consider_poly
configs/128/cam2/: camera_info
configs/128_2/: mode
configs/128_3/cam1/: camera_info
configs/128_4/cam2/: consider_poly
configs/12_cam1/: camera_info  consider_poly
configs/12_cam2/: camera_info  consider_poly
configs/131_cam1/: camera_info  consider_poly
configs/131_cam2/: camera_info  color_range  consider_poly
configs/14_cam1/: camera_info  consider_poly
configs/14_cam2/: camera_info  consider_poly
configs/14_cam2_1/: camera_info  consider_poly
configs/15_cam1/: camera_info  consider_poly
configs/15_cam2/: camera_info  consider_poly
configs/test/cam1/: consider_poly
configs/test/cam2/: camera_info  consider_poly
configs/test1/: camera_info
configs/test2/: consider_poly
configs/test_1/cam2/: camera_info
core/: Constants.py  Equation3d.py  common.py  display.py
experiment_AprilTag/: data.csv  data.xlsx
ios_cam/: cameraController  r.py  viewController
robot_control/: controller.py  r.py  rasp3.py  rasp4.py  rasp_old.py  testDroidCam.py
robot_controll/: controller.py  rasp.py  rasp2.py  rasp3.py
